tidy submissions - now bundle template

--- a/_config.yml
+++ b/_config.yml
@@ -968,6 +968,49 @@ issues:
     - Robust
     - SocialSciences
     landing: '2017'
+  - title: 'autoimage: Multiple Heat Maps for Projected Coordinates'
+    bibtitle: 'autoimage: Multiple Heat Maps for Projected Coordinates'
+    slug: RJ-2017-025
+    author: Joshua P. French
+    bibauthor: Joshua P. French
+    abstract: 'Heat maps are commonly used to display the spatial distribution of
+      a response observed on a two-dimensional grid. The autoimage package provides
+      convenient functions for constructing multiple heat maps in unified, seamless
+      way, particularly when working with projected coordinates. The autoimage package
+      natively supports: 1. automatic inclusion of a color scale with the plotted
+      image, 2. construction of heat maps for responses observed on regular or irregular
+      grids, as well as non-gridded data, 3. construction of a matrix of heat maps
+      with a common color scale, 4. construction of a matrix of heat maps with individual
+      color scales, 5. projecting coordinates before plotting, 6. easily adding geographic
+      borders, points, and other features to the heat maps. After comparing the autoimage
+      package’s capabilities for constructing heat maps to those of existing tools,
+      a carefully selected set of examples is used to highlight the capabilities of
+      the autoimage package.'
+    acknowledged: '2016-08-25'
+    online: '2017-05-02'
+    CRANpkgs:
+    - autoimage
+    - fields
+    - lattice
+    - sp
+    - ggplot2
+    - spatstat
+    - gridExtra
+    - cowplot
+    - akima
+    - mapproj
+    - gear
+    - viridisLite
+    - maps
+    CTV_rev:
+    - Spatial
+    - Graphics
+    - SpatioTemporal
+    - Multivariate
+    - NumericalMathematics
+    - Phylogenetics
+    - Survival
+    landing: '2017'
 - issue: 2009-1
   year: 2009
   volume: 1
