add citations to 2016-98

--- a/_config.yml
+++ b/_config.yml
@@ -871,7 +871,20 @@ issues:
       ets,            well-known time series forecasting functions available on CRAN
       repository.'
     acknowledged: '2016-09-12'
-    online: '2017-05-07'
+    online: '2017-05-08'
+    CRANpkgs:
+    - PSF
+    - cluster
+    - data.table
+    - forecast
+    CTV_rev:
+    - Environmetrics
+    - Finance
+    - Cluster
+    - Econometrics
+    - HighPerformanceComputing
+    - Multivariate
+    - TimeSeries
     landing: '2017'
   - title: 'BayesBinMix: an R Package for Model Based Clustering of Multivariate Binary
       Data'
