--- a/_config.yml
+++ b/_config.yml
@@ -871,7 +871,7 @@ issues:
       ets,            well-known time series forecasting functions available on CRAN
       repository.'
     acknowledged: '2016-09-12'
-    online: '2017-05-08'
+    online: '2017-05-10'
     CRANpkgs:
     - PSF
     - cluster
@@ -1061,6 +1061,51 @@ issues:
     - Spatial
     - Bayesian
     - Phylogenetics
+    - WebTechnologies
+    landing: '2017'
+  - title: 'Hosting Data Packages via drat: A Case Study with Hurricane Exposure Data'
+    bibtitle: |-
+      Hosting Data Packages via drat: A Case Study with Hurricane
+                Exposure Data
+    slug: RJ-2017-026
+    author:
+    - G. Brooke Anderson
+    - Dirk Eddelbuettel
+    bibauthor: G. Brooke Anderson and Dirk Eddelbuettel
+    abstract: '  Abstract Data-only packages offer a way to provide extended functionality
+      for other R users. However,            such packages can be large enough to
+      exceed the package size limit (5 megabytes) for the Comprehen           sive
+      R Archive Network (CRAN). As an alternative, large data packages can be posted
+      to additional            repostiories beyond CRAN itself in a way that allows
+      smaller code packages on CRAN to access and            use the data. The drat
+      package facilitates creation and use of such alternative repositories and makes            it
+      particularly simple to host them via GitHub. CRAN packages can draw on packages
+      posted to drat            repositories through the use of the ‘Additonal_repositories’
+      field in the DESCRIPTION file. This paper            describes how R users can
+      create a suite of coordinated packages, in which larger data packages are            hosted
+      in an alternative repository created with drat, while a smaller code package
+      that interacts with            this data is created that can be submitted to
+      CRAN.'
+    acknowledged: '2017-02-17'
+    online: '2017-05-10'
+    CRANpkgs:
+    - NMMAPSlite
+    - stashR
+    - rnoaa
+    - tigris
+    - UScensus2000
+    - drat
+    - grattan
+    - hurricaneexposure
+    - devtools
+    - rcmdcheck
+    - git2r
+    - littler
+    - grattan
+    - knitr
+    - roxygen2
+    CTV_rev:
+    - ReproducibleResearch
     - WebTechnologies
     landing: '2017'
 - issue: 2009-1
