--- a/_config.yml
+++ b/_config.yml
@@ -1107,6 +1107,55 @@ issues:
     - ReproducibleResearch
     - WebTechnologies
     landing: '2017'
+  - title: 'The NoiseFiltersR Package: Label Noise Preprocessing in R'
+    bibtitle: 'The NoiseFiltersR Package: Label Noise Preprocessing in R'
+    slug: RJ-2017-027
+    author:
+    - Pablo Morales
+    - Julián Luengo
+    - Luís P.F. Garcia
+    - Ana C. Lorena
+    - André C.P.L.F. de Carvalho
+    - '           Francisco Herrera'
+    bibauthor: |-
+      Pablo Morales and Julián Luengo and Luís P.F. Garcia and
+                Ana C. Lorena and André C.P.L.F. de Carvalho and Francisco
+                Herrera
+    abstract: '  Abstract In Data Mining, the value of extracted knowledge is directly
+      related to the quality of the            used data. This makes data preprocessing
+      one of the most important steps in the knowledge discovery            process.
+      A common problem affecting data quality is the presence of noise. A training
+      set with label            noise can reduce the predictive performance of classification
+      learning techniques and increase the            overfitting of classification
+      models. In this work we present the NoiseFiltersR package. It contains the            first
+      extensive R implementation of classical and state-of-the-art label noise filters,
+      which are the most            common techniques for preprocessing label noise.
+      The algorithms used for the implementation of the            label noise filters
+      are appropriately documented and referenced. They can be called in a R-user-friendly            manner,
+      and their results are unified by means of the "filter" class, which also benefits
+      from adapted            print and summary methods.'
+    acknowledged: '2016-07-12'
+    online: '2017-05-10'
+    CRANpkgs:
+    - MICE
+    - Amelia
+    - caret
+    - FSelector
+    - mvoutlier
+    - robustDA
+    - probFDA
+    - NoiseFiltersR
+    - unbalanced
+    - RWeka
+    CTV_rev:
+    - MachineLearning
+    - Multivariate
+    - Robust
+    - HighPerformanceComputing
+    - NaturalLanguageProcessing
+    - OfficialStatistics
+    - SocialSciences
+    landing: '2017'
 - issue: 2009-1
   year: 2009
   volume: 1
