new accepted to 2017-1

--- a/_config.yml
+++ b/_config.yml
@@ -1242,6 +1242,172 @@ issues:
     - Optimization
     - Phylogenetics
     landing: '2017'
+  - title: 'PGEE: An R Package for Analysis of Longitudinal Data with High-Dimensional
+      Covariates'
+    bibtitle: |-
+      PGEE: An R Package for Analysis of Longitudinal Data with
+                High-Dimensional Covariates
+    slug: RJ-2017-030
+    author:
+    - Gul Inan
+    - Lan Wang
+    bibauthor: Gul Inan and Lan Wang
+    abstract: '  Abstract We introduce an R package PGEE that implements the penalized
+      generalized estimating            equations (GEE) procedure proposed by Wang
+      et al. (2012) to analyze longitudinal data with a large            number of
+      covariates. The PGEE package includes three main functions: CVfit, PGEE, and
+      MGEE. The            CVfit function computes the cross-validated tuning parameter
+      for penalized generalized estimating            equations. The function PGEE
+      performs simultaneous estimation and variable selection for longitudinal            data
+      with high-dimensional covariates; whereas the function MGEE fits unpenalized
+      GEE to the data for            comparison. The R package PGEE is illustrated
+      using a yeast cell-cycle gene expression data set.'
+    acknowledged: '2016-09-15'
+    online: '2017-06-08'
+    CRANpkgs:
+    - gee
+    - geepack
+    - PGEE
+    - MASS
+    - mvtnorm
+    - ncvreg
+    - penalized
+    - glmnet
+    - rqPen
+    CTV_rev:
+    - MachineLearning
+    - SocialSciences
+    - Distributions
+    - Econometrics
+    - Multivariate
+    - Survival
+    - Environmetrics
+    - Finance
+    - NumericalMathematics
+    - Psychometrics
+    - Robust
+    landing: '2017'
+  - title: 'minval: An R package for MINimal VALidation of Stoichiometric Reactions'
+    bibtitle: |-
+      minval: An R package for MINimal VALidation of
+                Stoichiometric Reactions
+    slug: RJ-2017-031
+    author:
+    - Daniel Osorio
+    - Janneth Gonzalez
+    - Andres Pinzon
+    bibauthor: Daniel Osorio and Janneth Gonzalez and Andres Pinzon
+    abstract: '  Abstract A genome-scale metabolic reconstruction is a compilation
+      of all stoichiometric reactions that            can describe the entire cellular
+      metabolism of an organism, and they have become an indispensable            tool
+      for our understanding of biological phenomena, covering fields that range from
+      systems biology            to bioengineering. Interrogation of metabolic reconstructions
+      are generally carried through Flux            Balance Analysis, an optimization
+      method in which the biological sense of the optimal solution is            highly
+      sensitive to thermodynamic unbalance caused by the presence of stoichiometric
+      reactions            whose compounds are not produced or consumed in any other
+      reaction (orphan metabolites) and            by mass unbalance. The minval package
+      was designed as a tool to identify orphan metabolites and            evaluate
+      the mass and charge balance of stoichiometric reactions. The package also includes
+      functions            to characterize and write models in TSV and SBML formats,
+      extract all reactants, products, metabolite            names and compartments
+      from a metabolic reconstruction.'
+    acknowledged: '2016-03-10'
+    online: '2017-06-08'
+    CRANpkgs:
+    - sybil
+    - abcdeFBA
+    - minval
+    - gdata
+    - readxl
+    - xlsx
+    - sybilSBML
+    - sybil
+    landing: '2017'
+  - title: Working with Daily Climate Model Output Data in R and the futureheatwaves
+      Package
+    bibtitle: |-
+      Working with Daily Climate Model Output Data in R and the
+                futureheatwaves Package
+    slug: RJ-2017-032
+    author:
+    - G. Brooke Anderson
+    - Colin Eason
+    - Elizabeth A. Barnes
+    bibauthor: G. Brooke Anderson and Colin Eason and Elizabeth A. Barnes
+    abstract: '  Abstract Research on climate change impacts can require extensive
+      processing of climate model output,            especially when using ensemble
+      techniques to incorporate output from multiple climate models and            multiple
+      simulations of each model. This processing can be particularly extensive when
+      identifying            and characterizing multi-day extreme events like heat
+      waves and frost day spells, as these must be            processed from model
+      output with daily time steps. Further, climate model output is in a format and            follows
+      standards that may be unfamiliar to most R users. Here, we provide an overview
+      of working            with daily climate model output data in R. We then present
+      the futureheatwaves package, which we            developed to ease the process
+      of identifying, characterizing, and exploring multi-day extreme events            in
+      climate model output. This package can input a directory of climate model output
+      files, identify all            extreme events using customizable event definitions,
+      and summarize the output using user-specified            functions.'
+    acknowledged: '2016-04-18'
+    online: '2017-06-08'
+    CRANpkgs:
+    - futureheatwaves
+    - futureheatwaves
+    - ggplot2
+    - ncdf4
+    - ncdf4.helpers
+    - PCICt
+    - ncdf4.helpers
+    - RCMIP5
+    - wux
+    - ggplot2
+    - Rcpp
+    - leaflet
+    - ncdf4.helpers
+    CTV_rev:
+    - Graphics
+    - Phylogenetics
+    - HighPerformanceComputing
+    - NumericalMathematics
+    - Spatial
+    - SpatioTemporal
+    landing: '2017'
+  - title: 'Counterfactual: An R Package for Counterfactual Analysis'
+    bibtitle: 'Counterfactual: An R Package for Counterfactual Analysis'
+    slug: RJ-2017-033
+    author:
+    - Mingli Chen
+    - Victor Chernozhukov
+    - Iván Fernández-Val
+    - Blaise Melly
+    bibauthor: |-
+      Mingli Chen and Victor Chernozhukov and Iván Fernández-Val
+                and Blaise Melly
+    abstract: '  Abstract The Counterfactual package implements the estimation and
+      inference methods of Cher           nozhukov et al. (2013) for counterfactual
+      analysis. The counterfactual distributions considered are            the result
+      of changing either the marginal distribution of covariates related to the outcome
+      variable of            interest, or the conditional distribution of the outcome
+      given the covariates. They can be applied to            estimate quantile treatment
+      effects and wage decompositions. This paper serves as an introduction to            the
+      package and displays basic functionality of the commands contained within.'
+    acknowledged: '2016-09-15'
+    online: '2017-06-08'
+    CRANpkgs:
+    - Counterfactual
+    - quantreg
+    - survival
+    CTV_rev:
+    - Econometrics
+    - SocialSciences
+    - Survival
+    - ClinicalTrials
+    - Environmetrics
+    - Optimization
+    - ReproducibleResearch
+    - Robust
+    landing: '2017'
 - issue: 2009-1
   year: 2009
   volume: 1
@@ -5650,8 +5816,8 @@ issues:
     old_slug: leeper
     title: Archiving Reproducible Research with R and Dataverse
     bibtitle: Archiving Reproducible Research with R and Dataverse
-    author: Thomas J. Leeper1
-    bibauthor: Thomas J. Leeper1
+    author: Thomas J. Leeper
+    bibauthor: Thomas J. Leeper
     landing: '2014'
     abstract: '  Abstract Reproducible research and data archiving are increasingly
       important issues in research            involving statistical analyses of quantitative
