add ORCiD links

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,112 @@
 markdown: kramdown
 issues:
 - issue: accepted
-  articles: []
+  articles:
+  - slug: RJ-2017-034
+    title: 'anchoredDistr: a Package for the Bayesian Inversion of Geostatistical
+      Parameters with Multi-type and Multi-scale Data'
+    bibtitle: |-
+      anchoredDistr: a Package for the Bayesian Inversion of
+                Geostatistical Parameters with Multi-type and Multi-scale
+                Data
+    author:
+    - Heather Savoy
+    - Falk Heße
+    - Yoram Rubin
+    bibauthor: Heather Savoy and Falk Heße and Yoram Rubin
+    abstract: '  Abstract The Method of Anchored Distributions (MAD) is a method for
+      Bayesian inversion designed            for inferring both local (e.g. point
+      values) and global properties (e.g. mean and variogram parameters)            of
+      spatially heterogenous fields using multi-type and multi-scale data. Software
+      implementations            of MAD exist in C++ and C# to import data, execute
+      an ensemble of forward model simulations,            and perform basic post-processing
+      of calculating likelihood and posterior distributions for a given            application.
+      This article describes the R package anchoredDistr that has been built to provide
+      an R           based environment for this method. In particular, anchoredDistr
+      provides a range of post-processing            capabilities for MAD software
+      by taking advantage of the statistical capabilities and wide use of the            R
+      language. Two examples from stochastic hydrogeology are provided to highlight
+      the features of            the package for MAD applications in inferring anchored
+      distributions of local parameters (e.g. point            values of transmissivity)
+      as well as global parameters (e.g. the mean of the spatial random function for            hydraulic
+      conductivity).'
+    acknowledged: '2016-08-25'
+    online: '2017-06-28'
+    CRANpkgs:
+    - gstat
+    - spBayes
+    - spTimer
+    - anchoredDistr
+    - devtools
+    - RSQLite
+    - np
+    - plyr
+    - dplyr
+    - ggplot2
+    CTV_rev:
+    - Spatial
+    - SpatioTemporal
+    - Bayesian
+    - Econometrics
+    - Graphics
+    - Phylogenetics
+    - SocialSciences
+    - TimeSeries
+    landing: '2017'
+  - slug: RJ-2017-035
+    title: A Tidy Data Model for Natural Language Processing using cleanNLP
+    bibtitle: |-
+      A Tidy Data Model for Natural Language Processing using
+                cleanNLP
+    author: Taylor Arnold
+    bibauthor: Taylor Arnold
+    abstract: '  Abstract Recent advances in natural language processing have produced
+      libraries that extract low           level features from a collection of raw
+      texts. These features, known as annotations, are usually stored            internally
+      in hierarchical, tree-based data structures. This paper proposes a data model
+      to represent            annotations as a collection of normalized relational
+      data tables optimized for exploratory data analysis            and predictive
+      modeling. The R package cleanNLP, which calls one of two state of the art NLP            libraries
+      (CoreNLP or spaCy), is presented as an implementation of this data model. It
+      takes raw text            as an input and returns a list of normalized tables.
+      Specific annotations provided include tokenization,            part of speech
+      tagging, named entity recognition, sentiment analysis, dependency parsing, coreference            resolution,
+      and word embeddings. The package currently supports input text in English, German,            French,
+      and Spanish.'
+    acknowledged: '2017-03-27'
+    online: '2017-06-28'
+    CRANpkgs:
+    - dplyr
+    - ggplot2
+    - magrittr
+    - broom
+    - janitor
+    - tidyr
+    - cleanNLP
+    - tidytext
+    - StanfordCoreNLP
+    - coreNLP
+    - XML
+    - spacyr
+    - NLP
+    - cleanNLP
+    - lda
+    - lsa
+    - topicmodels
+    - sqliter
+    - rJava
+    - sotu
+    - glmnet
+    CTVs: NaturalLanguageProcessing
+    CTV_rev:
+    - NaturalLanguageProcessing
+    - WebTechnologies
+    - Graphics
+    - HighPerformanceComputing
+    - MachineLearning
+    - Phylogenetics
+    - Survival
+    landing: '2017'
 - issue: 2009-1
   year: 2009
   volume: 1
