--- a/_config.yml
+++ b/_config.yml
@@ -10361,10 +10361,10 @@ issues:
     - 239
     - 251
   - slug: RJ-2017-011
-    title: 'EMSaov: An R Package for the Analysis of Variances with the Expected Mean
+    title: 'EMSaov: An R Package for the Analysis of Variance with the Expected Mean
       Squares and its Shiny Application'
     bibtitle: |-
-      EMSaov: An R Package for the Analysis of Variances with the
+      EMSaov: An R Package for the Analysis of Variance with the
                 Expected Mean Squares and its Shiny Application
     author:
     - Hye-Min Choe
