--- a/_config.yml
+++ b/_config.yml
@@ -9623,7 +9623,7 @@ issues:
   volume: 9
   num: 1
   month: June
-  bibmonth: june
+  bibmonth: jun
   articles:
   - slug: editorial
     author: Roger Bivand
@@ -9824,10 +9824,10 @@ issues:
     - 60
     - 76
   - slug: RJ-2017-024
-    title: 'The mosaic package: helping students to `think with data'' using R'
+    title: 'The mosaic Package: Helping Students to `Think with Data' Using R
     bibtitle: |-
-      The mosaic package: helping students to `think with data'
-                using R
+      The mosaic Package: Helping Students to `Think with Data'
+                Using R
     author:
     - Randall Pruim
     - Daniel T Kaplan
@@ -10127,11 +10127,11 @@ issues:
     - 164
     - 186
   - slug: RJ-2017-008
-    title: 'On some extensions to GA package: hybrid optimisation, parallelisation
+    title: 'On Some Extensions to GA Package: Hybrid Optimisation, Parallelisation and Islands EvolutionOn some extensions to GA package: hybrid optimisation, parallelisation
       and islands evolution'
     bibtitle: |-
-      On some extensions to GA package: hybrid optimisation,
-                parallelisation and islands evolution
+      On Some Extensions to GA Package: Hybrid Optimisation,
+                Parallelisation and Islands Evolution
     author: Luca Scrucca
     bibauthor: Luca Scrucca
     abstract: '  Abstract Genetic algorithms are stochastic iterative algorithms in
