--- a/_config.yml
+++ b/_config.yml
@@ -9824,7 +9824,7 @@ issues:
     - 60
     - 76
   - slug: RJ-2017-024
-    title: 'The mosaic Package: Helping Students to `Think with Data' Using R
+    title: 'The mosaic Package: Helping Students to Think with Data Using R'
     bibtitle: |-
       The mosaic Package: Helping Students to `Think with Data'
                 Using R
