--- a/_config.yml
+++ b/_config.yml
@@ -107,6 +107,82 @@ issues:
     - Phylogenetics
     - Survival
     landing: '2017'
+  - slug: RJ-2017-036
+    title: Discrete Time Markov Chains with R
+    bibtitle: Discrete Time Markov Chains with R
+    author: Giorgio Alfredo Spedicato
+    bibauthor: Giorgio Alfredo Spedicato
+    abstract: '  Abstract The markovchain package aims to provide S4 classes and methods
+      to easily handle Discrete            Time Markov Chains (DTMCs), filling the
+      gap with what is currently available in the CRAN repository.            In this
+      work, I provide an exhaustive description of the main functions included in
+      the package, as            well as hands-on examples.'
+    acknowledged: '2016-11-16'
+    online: '2017-07-24'
+    CRANpkgs:
+    - markovchain
+    - clickstream
+    - DTMCPack
+    - MTCM
+    - FuzzyStatProb
+    - depmixS4
+    - HMM
+    - msm
+    - heemod
+    - TPmsm
+    - Rcpp
+    - igraph
+    - matlab
+    - Matrix
+    - expm
+    - method
+    - expm
+    - RcppParallel
+    CTV_rev:
+    - NumericalMathematics
+    - HighPerformanceComputing
+    - Survival
+    - Cluster
+    - Distributions
+    - Econometrics
+    - Finance
+    - gR
+    - Graphics
+    - Multivariate
+    - Optimization
+    - Spatial
+    - TimeSeries
+    landing: '2017'
+  - slug: RJ-2017-037
+    title: Furniture for Quantitative Scientists
+    bibtitle: Furniture for Quantitative Scientists
+    author:
+    - Tyson S. Barrett
+    - Emily Brignone
+    bibauthor: Tyson S. Barrett and Emily Brignone
+    abstract: '  Abstract A basic understanding of the distributions of study variables
+      and the relationships among            them is essential to inform statistical
+      modeling. This understanding is achieved through the com           putation
+      of summary statistics and exploratory data analysis. Unfortunately, this step
+      tends to be            under-emphasized in the research process, in part because
+      of the often tedious nature of thorough            exploratory data analysis.
+      The table1() function in the furniture package streamlines much of the            exploratory
+      data analysis process, making the computation and communication of summary statistics            simple
+      and beautiful while offering significant time-savings to the researcher.'
+    acknowledged: '2016-12-23'
+    online: '2017-07-24'
+    CRANpkgs:
+    - furniture
+    - tableone
+    - stargazer
+    - psych
+    - tidyverse
+    - foreign
+    CTV_rev:
+    - OfficialStatistics
+    - Psychometrics
+    - ReproducibleResearch
+    landing: '2017'
 - issue: 2009-1
   year: 2009
   volume: 1
@@ -10127,8 +10203,9 @@ issues:
     - 164
     - 186
   - slug: RJ-2017-008
-    title: 'On Some Extensions to GA Package: Hybrid Optimisation, Parallelisation and Islands EvolutionOn some extensions to GA package: hybrid optimisation, parallelisation
-      and islands evolution'
+    title: 'On Some Extensions to GA Package: Hybrid Optimisation, Parallelisation
+      and Islands EvolutionOn some extensions to GA package: hybrid optimisation,
+      parallelisation and islands evolution'
     bibtitle: |-
       On Some Extensions to GA Package: Hybrid Optimisation,
                 Parallelisation and Islands Evolution
