--- a/_config.yml
+++ b/_config.yml
@@ -183,6 +183,42 @@ issues:
     - Psychometrics
     - ReproducibleResearch
     landing: '2017'
+  - slug: RJ-2017-038
+    title: 'ctmcd: An R Package for Estimating the Parameters of a Continuous-Time
+      Markov Chain from Discrete-Time Data'
+    bibtitle: |-
+      ctmcd: An R Package for Estimating the Parameters of a
+                Continuous-Time Markov Chain from Discrete-Time Data
+    author: Marius Pfeuffer
+    bibauthor: Marius Pfeuffer
+    abstract: '  Abstract This article introduces the R package ctmcd, which provides
+      an implementation of methods            for the estimation of the parameters
+      of a continuous-time Markov chain given that data are only            available
+      on a discrete-time basis. This data consists of partial observations of the
+      state of the chain,            which are made without error at discrete times,
+      an issue also known as the embedding problem for            Markov chains. The
+      functions provided comprise matrix logarithm based approximations as described            in
+      Israel et al. (2001), as well as Kreinin and Sidelnikova (2001), an expectation-maximization
+      algorithm            and a Gibbs sampling approach, both introduced by Bladt
+      and Sørensen (2005). For the expectation           maximization algorithm Wald
+      confidence intervals based on the Fisher information estimation method            of
+      Oakes (1999) are provided. For the Gibbs sampling approach, equal-tailed credibility
+      intervals            can be obtained. In order to visualize the parameter estimates,
+      a matrix plot function is provided.            The methods described are illustrated
+      by Standard and Poor’s discrete-time corporate credit rating            transition
+      data.'
+    acknowledged: '2016-12-12'
+    online: '2017-07-28'
+    CRANpkgs:
+    - msm
+    - ctmcd
+    - coda
+    CTV_rev:
+    - Bayesian
+    - Distributions
+    - gR
+    - Survival
+    landing: '2017'
 - issue: 2009-1
   year: 2009
   volume: 1
