--- a/_config.yml
+++ b/_config.yml
@@ -395,14 +395,23 @@ issues:
     pages:
     - 40
     - 46
-  - slug: Orr+Liu
-    title: Sample Size Estimation while Controlling False Discovery Rate for Microarray
-      Experiments Using the ssize.fdr Package
-    bibtitle: Sample Size Estimation while Controlling False Discovery Rate for Microarray
-      Experiments Using the {ssize.fdr} Package
+  - slug: RJ-2009-019
+    old_slug: Orr+Liu
+    title: 'Sample Size Estimation while Controlling False Discovery Rate for Microarray Experiments Using the ssize.fdr Package'
+    bibtitle: |-
+      Sample Size Estimation while Controlling False Discovery Rate 
+          for Microarray Experiments Using the {ssize.fdr} Package
     author:
     - Megan Orr
     - Peng Liu
+    bibauthor: Megan Orr and Peng Liu
+    landing: '2009'
+    abstract: Microarray experiments are becoming more and more popular and critical in 
+      many biological disciplines. As in any statistical experiment, appropriate experimental 
+      design is essential for reliable statistical inference, and sample size has a crucial
+      role in experimental design. Because microarray experiments are rather costly, it is
+      important to have an adequate sample size that will achieve a desired power without
+       wasting resources.
     pages:
     - 47
     - 53
