--- a/_config.yml
+++ b/_config.yml
@@ -219,6 +219,49 @@ issues:
     - gR
     - Survival
     landing: '2017'
+  - slug: RJ-2017-039
+    title: 'anomalyDetection: Implementation of Augmented Network Log Anomaly Detection
+      Procedures'
+    bibtitle: |-
+      anomalyDetection: Implementation of Augmented Network Log
+                Anomaly Detection Procedures
+    author:
+    - Robert J. Gutierrez
+    - Bradley C. Boehmke
+    - Kenneth W. Bauer
+    - Cade M. Saie
+    - Trevor J. Bihl
+    bibauthor: |-
+      Robert J. Gutierrez and Bradley C. Boehmke and Kenneth W.
+                Bauer and Cade M. Saie and Trevor J. Bihl
+    abstract: '  Abstract As the number of cyber-attacks continues to grow on a daily
+      basis, so does the delay in threat            detection. For instance, in 2015,
+      the Office of Personnel Management discovered that approximately            21.5
+      million individual records of Federal employees and contractors had been stolen.
+      On average,            the time between an attack and its discovery is more
+      than 200 days. In the case of the OPM breach,            the attack had been
+      going on for almost a year. Currently, cyber analysts inspect numerous potential            incidents
+      on a daily basis, but have neither the time nor the resources available to perform
+      such a task.            anomalyDetection aims to curtail the time frame in which
+      anomalous cyber activities go unnoticed            and to aid in the efficient
+      discovery of these anomalous transactions among the millions of daily logged            events
+      by i) providing an efficient means for pre-processing and aggregating cyber
+      data for analysis            by employing a tabular vector transformation and
+      handling multicollinearity concerns; ii) offering            numerous built-in
+      multivariate statistical functions such as Mahalanobis Distance, Factor Analysis,            Principal
+      Components Analysis to identify anomalous activity, iii) incorporating the pipe
+      operator            (%>%) to allow it to work well in the tidyverse workflow.
+      Combined, anomalyDetection offers cyber            analysts an efficient and
+      simplified approach to break up network events into time-segment blocks            and
+      identify periods associated with suspected anomalies for further evaluation.'
+    acknowledged: '2017-05-05'
+    online: '2017-08-04'
+    CRANpkgs:
+    - anomalyDetection
+    - magrittr
+    - tidyverse
+    CTV_rev: WebTechnologies
+    landing: '2017'
 - issue: 2009-1
   year: 2009
   volume: 1
@@ -397,21 +440,21 @@ issues:
     - 46
   - slug: RJ-2009-019
     old_slug: Orr+Liu
-    title: 'Sample Size Estimation while Controlling False Discovery Rate for Microarray Experiments Using the ssize.fdr Package'
-    bibtitle: |-
-      Sample Size Estimation while Controlling False Discovery Rate 
-          for Microarray Experiments Using the {ssize.fdr} Package
+    title: Sample Size Estimation while Controlling False Discovery Rate for Microarray
+      Experiments Using the ssize.fdr Package
+    bibtitle: "Sample Size Estimation while Controlling False Discovery Rate \n    for
+      Microarray Experiments Using the {ssize.fdr} Package"
     author:
     - Megan Orr
     - Peng Liu
     bibauthor: Megan Orr and Peng Liu
     landing: '2009'
-    abstract: Microarray experiments are becoming more and more popular and critical in 
-      many biological disciplines. As in any statistical experiment, appropriate experimental 
-      design is essential for reliable statistical inference, and sample size has a crucial
-      role in experimental design. Because microarray experiments are rather costly, it is
-      important to have an adequate sample size that will achieve a desired power without
-       wasting resources.
+    abstract: Microarray experiments are becoming more and more popular and critical
+      in many biological disciplines. As in any statistical experiment, appropriate
+      experimental design is essential for reliable statistical inference, and sample
+      size has a crucial role in experimental design. Because microarray experiments
+      are rather costly, it is important to have an adequate sample size that will
+      achieve a desired power without wasting resources.
     pages:
     - 47
     - 53
