--- a/_config.yml
+++ b/_config.yml
@@ -262,6 +262,95 @@ issues:
     - tidyverse
     CTV_rev: WebTechnologies
     landing: '2017'
+  - slug: RJ-2017-040
+    title: 'dGAselID: An R Package for Selecting a Variable Number of Features in
+      High Dimensional Data'
+    bibtitle: |-
+      dGAselID: An R Package for Selecting a Variable Number of
+                Features in High Dimensional Data
+    author:
+    - Nicolae Teodor Melita
+    - Stefan Holban
+    bibauthor: Nicolae Teodor Melita and Stefan Holban
+    abstract: '  Abstract The dGAselID package proposes an original approach to feature
+      selection in high dimen           sional data. The method is built upon a diploid
+      genetic algorithm. The genotype to phenotype            mapping is modeled after
+      the Incomplete Dominance Inheritance, overpassing the necessity to define            a
+      dominance scheme. The fitness evaluation is done by user selectable supervised
+      classifiers, from a            broad range of options. Cross validation options
+      are also accessible. A new approach to crossover,            inspired from the
+      random assortment of chromosomes during meiosis is included. Several mutation            operators,
+      inspired from genetics, are also proposed. The package is fully compatible with
+      the data            formats used in Bioconductor and MLInterfaces package, readily
+      applicable to microarray studies,            but is flexible to other feature
+      selection applications from high dimensional data. Several options for            the
+      visualization of evolution and outcomes are implemented to facilitate the interpretation
+      of results.            The package’s functionality is illustrated by examples.'
+    acknowledged: '2016-08-25'
+    online: '2017-08-25'
+    CRANpkgs:
+    - dGAselID
+    - genalg
+    - GA
+    - nsga2R
+    - gaoptim
+    - STPGA
+    - kofnGA
+    - mogavs
+    - gaselect
+    - scales
+    BIOpkgs:
+    - MLInterfaces
+    - MLInterfaces
+    - ALL
+    - genefilter
+    - hgu95av2.db
+    CTV_rev: Optimization
+    landing: '2017'
+  - slug: RJ-2017-041
+    title: 'CRTgeeDR: an R Package for Doubly Robust Generalized Estimating Equations
+      Estimations in Cluster Randomized Trials with Missing Data.'
+    bibtitle: |-
+      CRTgeeDR: an R Package for Doubly Robust Generalized
+                Estimating Equations Estimations in Cluster Randomized
+                Trials with Missing Data.
+    author:
+    - Melanie Prague
+    - Rui Wang
+    - Victor De Gruttola
+    bibauthor: Melanie Prague and Rui Wang and Victor De Gruttola
+    abstract: '  Abstract Semi-parametric approaches based on generalized estimating
+      equation (GEE) are widely            used to analyze correlated outcomes in
+      longitudinal settings. In this paper, we present a package            CRTgeeDR
+      developed for cluster randomized trials with missing data (CRTs). For use of
+      inverse            probability weighting to adjust for missing data in cluster
+      randomized trials (CRTs), we show that other            software lead to biased
+      estimation for non-independence working correlation structure. CRTgeeDR            solve
+      this problem. We also extend the ability of existing packages to allow augmented
+      Doubly Robust            GEE estimation (DR). Simulations studies demonstrate
+      the consistency of estimators implemented in            CRTgeeDR compared to
+      packages such as geepack and the gains associated with the use of the DR            for
+      analyzing a binary outcome using a logistic regression. Finally, we illustrate
+      the method on data            from a sanitation CRT in developing countries.'
+    acknowledged: '2016-11-16'
+    online: '2017-08-25'
+    CRANpkgs:
+    - CRTgeeDR
+    - gee
+    - geepack
+    - ipw
+    - drgee
+    - CausalGAM
+    - tmle
+    - tmlenet
+    - numDeriv
+    - geesmv
+    CTV_rev:
+    - SocialSciences
+    - Econometrics
+    - NumericalMathematics
+    - Robust
+    landing: '2017'
 - issue: 2009-1
   year: 2009
   volume: 1
