--- a/_config.yml
+++ b/_config.yml
@@ -351,6 +351,99 @@ issues:
     - NumericalMathematics
     - Robust
     landing: '2017'
+  - slug: RJ-2017-042
+    title: 'adegraphics: An S4 Lattice-Based Package for the Representation of Multivariate
+      Data'
+    bibtitle: |-
+      adegraphics: An S4 Lattice-Based Package for the
+                Representation of Multivariate Data
+    author:
+    - Aurélie Siberchicot
+    - Alice Julien-Laferrière
+    - Anne-Béatrice Dufour
+    - Jean Thioulouse
+    - Stéphane            Dray
+    bibauthor: |-
+      Aurélie Siberchicot and Alice Julien-Laferrière and Anne-
+                Béatrice Dufour and Jean Thioulouse and Stéphane Dray
+    abstract: '  Abstract The ade4 package provides tools for multivariate analyses.
+      Whereas new statistical methods            have been added regularly in the
+      package since its first release in 2002, the graphical functions, that            are
+      used to display the main outputs of an analysis, have not benefited from such
+      enhancements. In            this context, the adegraphics package, available
+      on CRAN since 2015, is a complete reimplementation            of the ade4 graphical
+      functionalities but with large improvements. The package uses the S4 object            system
+      (each graph is an object) and is based on the graphical framework provided by
+      lattice and            grid. We give a brief description of the package and
+      illustrate some important functionalities to build            elegant graphs.'
+    acknowledged: '2017-02-17'
+    online: '2017-10-07'
+    CRANpkgs:
+    - vegan
+    - MASS
+    - FactoMineR
+    - ade4
+    - lattice
+    - adegraphics
+    - sp
+    - spdep
+    - RColorBrewer
+    - ggplot2
+    CTVs: Multivariate
+    CTV_rev:
+    - Multivariate
+    - Spatial
+    - Graphics
+    - Psychometrics
+    - Environmetrics
+    - Econometrics
+    - Phylogenetics
+    - Distributions
+    - NumericalMathematics
+    - Robust
+    - SocialSciences
+    - SpatioTemporal
+    landing: '2017'
+  - slug: RJ-2017-043
+    title: 'LeArEst: Length and Area Estimation from Data Measured with Additive Error'
+    bibtitle: |-
+      LeArEst: Length and Area Estimation from Data Measured with
+                Additive Error
+    author:
+    - Mirta Benšić
+    - Petar Taler
+    - Safet Hamedović
+    - Emmanuel Karlo Nyarko
+    - Kristian Sabo
+    bibauthor: |-
+      Mirta Benšić and Petar Taler and Safet Hamedović and
+                Emmanuel Karlo Nyarko and Kristian Sabo
+    abstract: '  Abstract This paper describes an R package LeArEst that can be used
+      for estimating object dimensions            from a noisy image. The package
+      is based on the simple parametric model for data that are drawn            from
+      uniform distribution contaminated by an additive error. Our package is able
+      to estimate the            length of the object of interest on a given straight
+      line that intersects it as well as to estimate the object            area if
+      it is elliptically shaped. The input data may be a numerical vector as well
+      as an image in JPEG            format. In this paper, background statistical
+      models and methods for the package are summarized,            and algorithms
+      and key functions implemented are described. Also, examples that demonstrate
+      its            usage are provided.            Availability: LeArEst is available
+      on CRAN.'
+    acknowledged: '2017-07-07'
+    online: '2017-10-07'
+    CRANpkgs:
+    - LeArEst
+    - decon
+    - deamer
+    - conicfit
+    - jpeg
+    - opencpu
+    - shiny
+    CTV_rev:
+    - WebTechnologies
+    - NumericalMathematics
+    landing: '2017'
 - issue: 2009-1
   year: 2009
   volume: 1
